@@ -119,8 +119,8 @@ allprojects {
             exclude group: "net.fabricmc.fabric-api"
         })
 
-        modCompileOnly "maven.modrinth:sodium:mc1.19.2-0.4.4"
-//        implementation "org.joml:joml:1.10.2" // for sodium
+        modImplementation "maven.modrinth:sodium:mc1.19.2-0.4.4"
+        implementation "org.joml:joml:1.10.2" // for sodium
 
         modCompileOnly 'maven.modrinth:iris:1.19.x-v1.2.8'
 //        implementation "org.anarres:jcpp:1.4.14" // for iris
@@ -283,3 +283,5 @@ modrinth {
         required.project "P7dR8mSH" // Creates a new required dependency on Fabric API
     }
 }
+
+// Enable ZGC: -XX:+UseZGC
